# autoresearch

./: .gitignore  IMPLEMENTATION.md  MODAL_CHECKLIST.md  MODAL_QUICKSTART.md  MODAL_SETUP.md  Makefile  README.md  modal_agent_loop.py  modal_agent_utils.py  modal_app.py  modal_cli.py  modal_config.py  modal_runner.py  program.md  pyproject.toml
