[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
# Runtime deps (Linux/GPU only — these run inside Modal containers, not locally)
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1; sys_platform != 'darwin'",
]

# Local dev deps (Modal CLI + Anthropic SDK — work on macOS, install with `make install`)
[project.optional-dependencies]
dev = [
    "modal>=0.73",
    "anthropic>=0.40.0",
]

[tool.uv.sources]
# CUDA 12.8 wheels — Linux only; macOS falls back to no torch (not needed locally)
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
